# AiTradingBot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
src/: config.py  main.py
src/ai/: decision.py  decision_prompts.py  evaluator.py  exit_monitor.py  openrouter_client.py  portfolio_decision.py  prompts.py
src/core/: db.py  events.py  models.py  repository.py
src/execution/: executor.py  trailing.py
src/indicators/: stochastic.py
src/market/: binance_client.py  stablecoins.py  universe.py
src/scheduler/: jobs.py  runner.py
src/strategy/: portfolio_agent.py  risk.py  signal_engine.py  state.py
src/tgbot/: auth.py  bot.py  formatters.py  notifier.py
src/tgbot/handlers/: ai_analysis.py  balance.py  history.py  menu.py  monitor.py  pnl.py  positions.py  settings.py
tests/: test_config.py  test_exit_monitor.py  test_notify_close.py  test_portfolio_decision.py  test_position_view.py  test_prompts_history.py  test_repository_history.py  test_risk.py  test_stablecoins.py  test_state_machine.py  test_stochastic.py
