[project]
name = "binance-trading-bot"
version = "0.1.0"
description = "Telegram-controlled Binance Futures bot, fully driven by Grok 4.20 (nof1-style) on the 1h timeframe"
requires-python = ">=3.11,<3.13"
dependencies = [
    "python-binance>=1.0.19",
    "python-telegram-bot[job-queue]>=21.6",
    "apscheduler>=3.10.4",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "pandas>=2.2.2",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
# UP042: str+Enum mixin is still the most ergonomic option for SQLAlchemy
# `.value` round-trips. StrEnum changes equality semantics enough to be churn.
ignore = ["E501", "UP042"]
